# silk

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
config/: consensus.yaml
contracts/contract-simple/: Cargo.toml
contracts/contract-simple/src/: main.rs
deploy/: Procfile
doc/: README.md  flow chat.md
fuzz/: Cargo.toml
fuzz/src/: main.rs
images/buildenv/: Dockerfile
libs/blockdb/: Cargo.toml
libs/blockdb/src/: cp.rs  index.rs  keys.rs  lib.rs  provider.rs  reader.rs  store.rs  writer.rs
libs/blockdb/src/fs/: index.rs  mod.rs  reader.rs  store.rs  writer.rs
libs/consensus/: Cargo.toml
libs/consensus/src/: lib.rs  start.rs  support.rs
libs/contract/: Cargo.toml
libs/contract/src/: lib.rs  shim.rs  stub.rs
libs/error/: Cargo.toml
libs/error/src/: lib.rs
libs/identity/: Cargo.toml
libs/identity/src/: cert.rs  ed25519.rs  error.rs  lib.rs  rsa.rs  secp256k1.rs
libs/ledger/: Cargo.toml
libs/ledger/src/: lib.rs
libs/ledger/src/kvledger/: history.rs  id_store.rs  kv_ledger.rs  kv_ledger_provider.rs  mod.rs
libs/ledger/src/ledger_mgmt/: mod.rs
libs/ledger/src/rwset/: builder.rs  key.rs  mod.rs  validate.rs
libs/ledger/src/simulator/: mod.rs  sim.rs
libs/ledger/src/statedb/: mod.rs  statedb.rs  staterocksdb.rs  version.rs
libs/ledger/src/txmgr/: mod.rs
libs/peer/: Cargo.toml
libs/peer/src/: lib.rs  peer.rs
libs/rwset/: Cargo.toml
libs/rwset/src/: builder.rs  key.rs  lib.rs  rwset.rs  validate.rs
libs/simulator/: Cargo.toml
libs/simulator/src/: lib.rs  sim.rs
libs/statedb/: Cargo.toml
libs/statedb/src/: lib.rs  rocksdb.rs  statedb.rs  staterocksdb.rs  version.rs
libs/txmgr/: Cargo.toml
libs/txmgr/src/: lib.rs
libs/utils/: Cargo.toml
libs/utils/src/: base64.rs  hash.rs  hashable.rs  lib.rs  proto.rs  random.rs  time.rs  utils.rs
scripts/: compile_protos.sh
silk-ca/: Cargo.toml
silk-ca/src/: main.rs
silk-consensus/: Cargo.toml
silk-consensus/src/: main.rs
silk-peer/: Cargo.toml
silk-peer/src/: channel.rs  endorser.rs  event.rs  main.rs  support.rs
silk-peer/src/consensus/: handler.rs  mod.rs  server.rs  support.rs
silk-peer/src/contract/: handler.rs  mod.rs  server.rs  support.rs
silk-peer/src/p2p/: mod.rs  svr.rs
silk-proto/: Cargo.toml  build.rs
silk-proto/protos/: batch.proto  block.proto  common.proto  consensus.proto  contract.proto  keys.proto  kv_query_result.proto  kv_rwset.proto  ledger.proto  message.proto  peer.proto  proposal.proto  proposal_response.proto  rwset.proto  storage.proto  transaction.proto
silk-proto/src/: lib.rs  protos.rs
silk-proxy/: Cargo.toml
silk-proxy/src/: main.rs
tools/genesis/: Cargo.toml
