[workspace]

members = [
    "silk-peer",
    "silk-consensus",
    "silk-proxy",
    "silk-ca",
    "silk-proto",

    "libs/blockdb",
    "libs/consensus",
    "libs/contract",
    "libs/utils",
    "libs/error",
    "libs/ledger",
    "fuzz",

    "contracts/contract-simple",

    "tools/genesis",
]


