[package]
name = "silk-peer"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silk-proto = { path = "../silk-proto" }
utils = { path = "../libs/utils" }
error = { path = "../libs/error" }
failure = "0.1.6"
tonic = "0.1.1"
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
crossbeam = "0.7"
dashmap = "3.7.0"
async-trait = "0.1.27"
log = "0.4"
env_logger = "0.7.1"
