[package]
name = "silk-peer"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silk-proto = { path = "../silk-proto" }
utils = { path = "../libs/utils" }
error = { path = "../libs/error" }
failure = "0.1.8"
tonic = "0.3.1"
prost = "0.6"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.3.0"
crossbeam = "0.8.0"
dashmap = "3.11.10"
async-trait = "0.1.42"
log = "0.4"
env_logger = "0.8.2"
tokio = { version = "0.3", features = ["full"] }
