[package]
name = "blockdb"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.8"
byteorder = "1.3.2"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
utils = { path = "../utils" }
silk-proto = { path = "../../silk-proto" }
rocksdb = "0.15.0"
error = { path = "../error" }
bytes = "0.6.0"

[dev-dependencies]
tempfile = "3.1.0"
walkdir = "2.3.1"
