[package]
name = "error"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.3", features = ["full"] }
