[package]
name = "identity"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silk-proto = { path = "../../silk-proto" }
utils = { path = "../utils" }
libp2p = "0.19.0"
asn1_der = "0.6.1"
bs58 = "0.3.0"
ed25519-dalek = "1.0.0-pre.3"
lazy_static = "1.2"
libsecp256k1 = { version = "0.3.1", optional = true }
log = "0.4"
prost = "0.6.1"
rand = "0.7"
sha2 = "0.8.0"
thiserror = "1.0"
zeroize = "1"
rcgen = "0.8.2"
webpki = "0.21.2"

[target.'cfg(not(any(target_os = "emscripten", target_os = "unknown")))'.dependencies]
ring = { version = "0.16.9", features = ["alloc", "std"], default-features = false }

[dev-dependencies]
async-std = "1.0"
quickcheck = "0.9.0"
wasm-timer = "0.2"


[features]
default = ["secp256k1"]
secp256k1 = ["libsecp256k1"]
