[package]
name = "rwset"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
utils = { path = "../utils" }
silk-proto = { path = "../../silk-proto" }
error = { path = "../error" }
statedb = { path = "../statedb" }
bytes = "0.5"
log = "0.4"
