[package]
name = "simulator"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
silk-proto = { path = "../../silk-proto" }
error = { path = "../error" }
statedb = { path = "../statedb" }
rwset = { path = "../rwset" }
