[package]
name = "statedb"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silk-proto = { path = "../../silk-proto" }
utils = { path = "../utils" }
error = { path = "../error" }
rocksdb = "0.14.0"
dashmap = "3.7.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.0.7"
walkdir = "2.2.7"
