[package]
name = "txmgr"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silk-proto = { path = "../../silk-proto" }
utils = { path = "../utils" }
error = { path = "../error" }
statedb = { path = "../statedb" }
simulator = { path = "../simulator" }
rwset = { path = "../rwset" }
log = "0.4"

[dev-dependencies]
tempfile = "3.0.7"
walkdir = "2.2.7"
