[package]
name = "utils"
version = "0.1.0"
authors = ["snlansky <snlan@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.0"
hex-literal = "0.2.1"
hex = "0.3.2"
crypto-hash = "0.3.3"
tonic = "0.1.1"
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
prost-types = "0.6"
silk-proto = { path = "../../silk-proto" }
bytes = "0.5"
byteorder = "1.3.2"
